--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - $(aws ecr get-login-password --region $AWS_DEFAULT_REGION --no-include-email)
+      - $(aws ecr get-login-password --region us-east-1)
       - REPOSITORY_URI=071915009020.dkr.ecr.us-east-1.amazonaws.com/frontend/react-node
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
