--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,8 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - echo Logging in to Amazon ECR...
+      - aws --version
       - $(aws ecr get-login-password --region us-east-1)
       - REPOSITORY_URI=071915009020.dkr.ecr.us-east-1.amazonaws.com/frontend/react-node
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
