--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,11 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --region us-east-1 --no-include-email)
-      - REPOSITORY_URI=071915009020.dkr.ecr.us-east-1.amazonaws.com/frontend/react-node
+	      aws --region us-east-1 ecr get-login-password \
+        | docker login \
+        --password-stdin \
+        --username AWS \
+        "071915009020.dkr.ecr.us-east-1.amazonaws.com/frontend/react-node"
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
