--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,24 +1,21 @@
 version: 0.2
+
 phases:
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
-      - aws --version
-	-  aws --region us-east-1 ecr get-login-password \
-        	| docker login \
-        	--password-stdin \
-        	--username AWS \
-        	"071915009020.dkr.ecr.us-east-1.amazonaws.com/frontend/react-node"
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
+      #- $(aws ecr get-login --no-include-email --region us-east-1)
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 071915009020.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
-      - docker build -t $REPOSITORY_URI:latest -f Dockerfile.prod .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - "echo Build started on `date`"
+      - "echo Building the Docker image..."
+      - "docker build -t html-nginx ."
+      - "docker tag react-node:latest 071915009020.dkr.ecr.us-east-1.amazonaws.com/frontend/react-node"
   post_build:
     commands:
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - printf '[{"name":"my-app-default-container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - "echo Build completed on `date`"
+      - "echo Pushing the Docker image..."
+      - "docker push 071915009020.dkr.ecr.us-east-1.amazonaws.com/frontend/react-node:latest"
+      - printf '[{"name":"rakeshcontainer","imageUri":"%s"}]' 071915009020.dkr.ecr.us-east-1.amazonaws.com/frontend/react-node:latest > imagedefinitions.json
 artifacts:
   files: imagedefinitions.json
