--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   pre_build:
     commands:
       #- $(aws ecr get-login --no-include-email --region us-east-1)
-      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 071915009020.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 071915009020.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
       - "echo Build started on `date`"
